fixed nav bar on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -220,7 +220,11 @@ button:hover{
 @media only screen and (max-width: 560px) {
     
     nav {
-        top:20px;
+        top:2%;
+    }
+
+    .nav-item {
+        margin:10px;
     }
 
     .center-select {
@@ -230,7 +234,7 @@ button:hover{
 
     .side{
         top: -70%;
-        left:50px;
+        left: 50px;
         width: 85%;
         overflow:auto;
         height:auto;
